--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
 
-<section class="banner">
-  <img src="" alt="">
+<div class="banner">
+  <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
   <div class="both-content">
     <div class="banner-content">
-      <img src="" alt="">
+      <img src="images/mecha.svg" alt="">
     </div>
     <div class="banner-content">
       <h2>Ultra Super Fighting Force</h2>
       <p>Control giant, fighting, transforming robots and save the world!</p>
-      <a class="btn-big" href="#">Join USFF</a>
+      <a class="btn btn-big" href="#">Join USFF</a>
     </div>
   </div>
-</section>
+</div>
 
 </body>
 </html>
