--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       <div class="banner-content">
         <h2>Ultra Super Fighting Force</h2>
         <p>Control giant, fighting, transforming robots and save the world!</p>
-        <a class="btn btn-big" href="#">Join USFF</a>
+        <div>
+          <a class="btn btn-big" href="#">Join USFF</a>
+        </div>
       </div>
     </div>
   </div>
