Change image flex

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
     <div class="both-content">
       <div class="banner-content">
-        <img src="images/mecha.svg" alt="">
+        <img class="logo" src="images/mecha.svg" alt="">
       </div>
       <div class="banner-content">
         <h2>Ultra Super Fighting Force</h2>
