--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class="banner">
     <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
     <div class="both-content">
-      <div class="banner-content">
-        <img class="logo" src="images/mecha.svg" alt="">
+      <div class="logo">
+        <img class="img-flex" src="images/mecha.svg" alt="">
       </div>
       <div class="banner-content">
         <h2>Ultra Super Fighting Force</h2>
